@@ -1,15 +1,34 @@
 #! /bin/bash
 
+# repack_release.sh - repack sdcc Linux, Mac OS X and Windows
+# snapshot build source, binary and doc packages into a sdcc
+# release package.
 #
-# repack_release.sh
+# Copyright (c) 2009-2012 Borut Razem
 #
-# This script repacks sdcc Linux and Mac OS X snapshot build binary and doc
-# packages into a sdcc release package.
+# This file is part of SDCC.
 #
-# Example:
-# ./repack_release.sh 20090314 5413 2.9.0-rc1
+#  This software is provided 'as-is', without any express or implied
+#  warranty.  In no event will the authors be held liable for any damages
+#  arising from the use of this software.
 #
+#  Permission is granted to anyone to use this software for any purpose,
+#  including commercial applications, and to alter it and redistribute it
+#  freely, subject to the following restrictions:
+#
+#  1. The origin of this software must not be misrepresented; you must not
+#     claim that you wrote the original software. If you use this software
+#     in a product, an acknowledgment in the product documentation would be
+#     appreciated but is not required.
+#  2. Altered source versions must be plainly marked as such, and must not be
+#     misrepresented as being the original software.
+#  3. This notice may not be removed or altered from any source distribution.
+#
+#  Borut Razem
+#  borut.razem@gmail.com
 
+# Example:
+# ./repack_release.sh -dl -pr -ul 20090314 5413 2.9.0-rc1
 
 function fatal_error()
 {
@@ -20,7 +39,19 @@ function fatal_error()
 
 function usage()
 {
-  echo "Usage: repack_release.sh <date> <revision> <version>" 1>&2
+  echo "Usage: repack_release.sh [-h] [--help] [-dl] [-ul] <date> <revision> <version>" 1>&2
+  echo "Repack sdcc Linux, Mac OS X and Windows snapshot build source," 1>&2
+  echo "binary and doc packages into a sdcc release package." 1>&2
+  echo "Options:" 1>&2
+  echo "  -dl         download before processing" 1>&2
+  echo "  -pr         process packages" 1>&2
+  echo "  -ul         upload after processing" 1>&2
+  echo "  <none>      download, process and upload" 1>&2
+  echo "  -h --help   print this usage and exit" 1>&2
+  echo "Arguments:" 1>&2
+  echo "  <date>      package date in YYYMMDD format, for example 20090314" 1>&2
+  echo "  <revision>  svn revision number, for example 5413" 1>&2
+  echo "  <version>   package version number, for example 2.9.0-rc1" 1>&2
   exit 1;
 }
 
@@ -35,19 +66,15 @@ function download()
   then
     fatal_error "Can't cd to dl!"
   else
-    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/sdcc-src/sdcc-src-${date}-${revision}.tar.bz2
-
-    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/docs/sdcc-doc-${date}-${revision}.tar.bz2
-
-    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/docs/sdcc-doc-${date}-${revision}.zip
-
-    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/i386-unknown-linux2.5/sdcc-snapshot-i386-unknown-linux2.5-${date}-${revision}.tar.bz2
-
-    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/i586-mingw32msvc/sdcc-snapshot-i586-mingw32msvc-${date}-${revision}.zip
-
-    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/i586-mingw32msvc-setup/sdcc-${date}-${revision}-setup.exe
-
-    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/i386_universal-apple-macosx/sdcc-snapshot-i386_universal-apple-macosx-${date}-${revision}.tar.bz2
+    ( \
+    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/sdcc-src/sdcc-src-${date}-${revision}.tar.bz2 && \
+    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/docs/sdcc-doc-${date}-${revision}.tar.bz2 && \
+    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/docs/sdcc-doc-${date}-${revision}.zip && \
+    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/i386-unknown-linux2.5/sdcc-snapshot-i386-unknown-linux2.5-${date}-${revision}.tar.bz2 && \
+    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/i586-mingw32msvc/sdcc-snapshot-i586-mingw32msvc-${date}-${revision}.zip && \
+    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/i586-mingw32msvc-setup/sdcc-${date}-${revision}-setup.exe && \
+    wget http://sourceforge.net/projects/sdcc/files/snapshot_builds/i386_universal-apple-macosx/sdcc-snapshot-i386_universal-apple-macosx-${date}-${revision}.tar.bz2 \
+    ) || fatal_error "Can't download snapshot build packages!"
 
     mv sdcc-snapshot-i386_universal-apple-macosx-${date}-${revision}.tar.bz2 sdcc-snapshot-universal-apple-macosx-${date}-${revision}.tar.bz2
 
@@ -176,11 +203,27 @@ function upload()
 }
 
 
+# main procdure
 {
+  while [ -n "$1" ]
+  do
+    case "$1"
+    in
+    -dl) dl=1; has_opts=1; shift;;
+    -pr) pr=1; has_opts=1; shift;;
+    -ul) ul=1; has_opts=1; shift;;
+    -h|--help) usage; exit 0;;
+    -*) echo "Unknown option $arg!"; usage; exit 1;;
+    *) break;;
+    esac
+  done
+
   if [ $# != 3 ]
   then
     usage
   fi
+
+  test -z "$has_opts" && dl=1 && pr=1 $$ ul=1
 
   date=$1
   revision=$2
@@ -188,21 +231,24 @@ function upload()
 
   mkdir -p ul
 
-  download $date $revision
+  test -n "$dl" &&  download $date $revision
 
-  cp dl/sdcc-src-${date}-${revision}.tar.bz2 ul/sdcc-src-${ver}.tar.bz2
-  cp dl/sdcc-doc-${date}-${revision}.tar.bz2 ul/sdcc-doc-${ver}.tar.bz2
-  cp dl/sdcc-doc-${date}-${revision}.zip ul/sdcc-doc-${ver}.zip
+  if [ -n "$pr" ]
+  then
+    cp dl/sdcc-src-${date}-${revision}.tar.bz2 ul/sdcc-src-${ver}.tar.bz2
+    cp dl/sdcc-doc-${date}-${revision}.tar.bz2 ul/sdcc-doc-${ver}.tar.bz2
+    cp dl/sdcc-doc-${date}-${revision}.zip ul/sdcc-doc-${ver}.zip
 
-  for arch in i386-unknown-linux2.5 universal-apple-macosx
-  do
-    unpack dl/sdcc-snapshot-${arch}-${date}-${revision}.tar.bz2 dl/sdcc-doc-${date}-${revision}.tar.bz2
-    pack $arch $ver
-  done
+    for arch in i386-unknown-linux2.5 universal-apple-macosx
+    do
+      unpack dl/sdcc-snapshot-${arch}-${date}-${revision}.tar.bz2 dl/sdcc-doc-${date}-${revision}.tar.bz2
+      pack $arch $ver
+    done
 
-  repack_win $date $revision $ver
+    repack_win $date $revision $ver
+  fi
 
-  upload $ver
+  test -n "$ul" && upload $ver
 
   exit 0
 }
